<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="aianzuo_spjiaohuan">FL and Spare tire exchange</string>
    <string name="app_name">Tires pressure</string>
    <string name="banbenxingxi">Version Information</string>
    <string name="beitailuntai">Spare tire:</string>
    <string name="dianjikaishianniujintupeidui">Press the pair button to start</string>
    <string name="dianyabaojin">Low battery alarm</string>
    <string name="dianyaguodi">Low pwr.</string>
    <string name="hello_world">Hello world!</string>
    <string name="houyou_spjiaohuan">RR and Spare tire exchange</string>
    <string name="houzou_spjiaohuan">RL and Spare tire exchange</string>
    <string name="huifumorenzhi">Restore to default</string>
    <string name="idmapeidui">ID code pair</string>
    <string name="jiaohuanchenggong">Tyre exchange succeeded</string>
    <string name="kaishihuhuang">To exchange</string>
    <string name="kaishipeidui">To pair</string>
    <string name="lianjieyichang">CXN.failed</string>
    <string name="lianjieyichangbaojin">Abnormal connecction alarm</string>
    <string name="louqizhong">Leaking...</string>
    <string name="luntaixiangtongjingaobutishe">"Don't display the same warning for single tyre"</string>
    <string name="morengzhi">Default</string>
    <string name="qianyou_spjiaohuan">FR and Spare tire exchange</string>
    <string name="qinxuanzeyaopeiduideluntai">Please select the desired tyre</string>
    <string name="quanbuhuifumorenzhi">Reset all settings?</string>
    <string name="quxiaohuhuan">Cancel swap</string>
    <string name="quxiaopeidui">Cancel</string>
    <string name="settings">Settings</string>
    <string name="shengyinbaojin">Sound alarm</string>
    <string name="spare_tire_enable">Display spare tyre data</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="strNetworkTipsCancelBtn">取消</string>
    <string name="strNetworkTipsConfirmBtn">继续下载</string>
    <string name="strNetworkTipsMessage">你已切换到移动网络，是否继续当前下载？</string>
    <string name="strNetworkTipsTitle">网络提示</string>
    <string name="strNotificationClickToContinue">继续下载</string>
    <string name="strNotificationClickToInstall">点击安装</string>
    <string name="strNotificationClickToRetry">点击重试</string>
    <string name="strNotificationClickToView">点击查看</string>
    <string name="strNotificationDownloadError">下载失败</string>
    <string name="strNotificationDownloadSucc">下载完成</string>
    <string name="strNotificationDownloading">正在下载</string>
    <string name="strNotificationHaveNewVersion">有新版本</string>
    <string name="strToastCheckUpgradeError">检查新版本失败，请稍后重试</string>
    <string name="strToastCheckingUpgrade">正在检查，请稍候...</string>
    <string name="strToastYourAreTheLatestVersion">你已经是最新版了</string>
    <string name="strUpgradeDialogCancelBtn">下次再说</string>
    <string name="strUpgradeDialogContinueBtn">继续</string>
    <string name="strUpgradeDialogFeatureLabel">更新说明</string>
    <string name="strUpgradeDialogFileSizeLabel">包大小</string>
    <string name="strUpgradeDialogInstallBtn">安装</string>
    <string name="strUpgradeDialogRetryBtn">重试</string>
    <string name="strUpgradeDialogUpdateTimeLabel">更新时间</string>
    <string name="strUpgradeDialogUpgradeBtn">立即更新</string>
    <string name="strUpgradeDialogVersionLabel">版本</string>
    <string name="taiyadanwei">Press. Type</string>
    <string name="taiyaguodi">Low press.</string>
    <string name="taiyaguogao">High press.</string>
    <string name="taiyahuhuan">Tyre exchange</string>
    <string name="taiyahuhuanshibai">Tyre exchange failed.</string>
    <string name="taiyalianjieshibai">Caution! TPMS is not working.</string>
    <string name="taiyasheding">TPMS setup</string>
    <string name="taiyashibeicuowu">TPMS device error</string>
    <string name="taiyazhengchang">Normal</string>
    <string name="tanchukuangbaojin">Pop up alarm</string>
    <string name="tenminiter">In 10 minutes</string>
    <string name="tenthereminiter">In 30 minutes</string>
    <string name="tentwominiter">In 20 minutes</string>
    <string name="wendudanwei">Temp.type</string>
    <string name="wengduguogao">High temp.</string>
    <string name="xihuoqian">Before engine off</string>
    <string name="xingxiduqushibai">Information read failed.</string>
    <string name="xuexichenggong">ID code paired</string>
    <string name="xuexishibai">ID code pair failed</string>
    <string name="yichangzhudongbaojin">Abnormal tyre alarm</string>
    <string name="youhouluntai">RR tire:</string>
    <string name="youqianluntai">FR tire:</string>
    <string name="youqianyouhoujiaohuan">FR and RR exchange</string>
    <string name="youqianzuohoujiaohuan">FR and RL exchange</string>
    <string name="zhengzaiduquzhong">Loading...</string>
    <string name="zhengzaipeidui">Pairing...</string>
    <string name="zhengzeihuhuan">Exchanging...</string>
    <string name="zhuangtailantaiya">TPMS</string>
    <string name="zhuangtailantaiyayichang">Abnormal tire pressure, click for details!</string>
    <string name="zhuangtailantaiyazhengchang">Tire pressure is properly.</string>
    <string name="zouhouluntai">RL tire:</string>
    <string name="zouqianluntai">FL tire:</string>
    <string name="zuidibojintaiya">L press.alarm lim.</string>
    <string name="zuigaobaojintaiya">H press. alarm lim.</string>
    <string name="zuigaowendubaojin">H temp.alarm lim.</string>
    <string name="zuohouyouhoujiaohuan">RL and RR exchange</string>
    <string name="zuoqianyouhoujiaohuan">FL and RR exchange</string>
    <string name="zuoqianyouqianjiaohuan">FL and FR exchange</string>
    <string name="zuoqianzuohoujiaohuan">FL and RL exchange</string>
</resources>
