<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:gravity="center" android:id="@id/time_dialog_plane" android:background="#88888888" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:gravity="center" android:orientation="vertical" android:background="#ff000000" android:layout_width="470.0px" android:layout_height="380.0px">
        <TextView android:textSize="27.0px" android:textColor="#ffffffff" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0px" android:layout_marginTop="10.0px" android:layout_marginRight="10.0px" android:layout_marginBottom="10.0px" android:text="@string/luntaixiangtongjingaobutishe" />
        <View android:background="#ffffffff" android:layout_width="380.0px" android:layout_height="1.0px" />" <LinearLayout android:orientation="vertical" android:id="@id/time_select" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_marginTop="8.0px" android:layout_centerHorizontal="true">
            <Button android:textSize="25.0px" android:gravity="center" android:id="@id/mainbtn_0" android:tag="600" android:layout_width="440.0px" android:layout_height="64.0px" android:text="@string/tenminiter" />
            <Button android:textSize="25.0px" android:gravity="center" android:id="@id/mainbtn_1" android:tag="1200" android:layout_width="440.0px" android:layout_height="64.0px" android:text="@string/tentwominiter" />
            <Button android:textSize="25.0px" android:gravity="center" android:id="@id/mainbtn_2" android:tag="1800" android:layout_width="440.0px" android:layout_height="64.0px" android:text="@string/tenthereminiter" />
            <Button android:textSize="23.0px" android:gravity="center" android:id="@id/mainbtn_3" android:tag="\ 9223372036854775807" android:layout_width="440.0px" android:layout_height="64.0px" android:layout_marginBottom="14.0px" android:text="@string/xihuoqian" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>